correct chart align

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -70,6 +70,8 @@ header
 #chart 
   margin: 0 0 37px 0
   min-height: 960px
+  width: 960px
+  margin: 0 auto
   svg
     margin: 0 auto
     display: block
